# astrofs

./: Makefile.am  README.md  configure.ac  index.html  libtool  params.json
src/: Makefile.am
src/client/: Makefile.am  client  client.c
src/common/: Makefile.am
src/index/: Makefile.am  coreImpl.cpp  createtab.sql.  cscope.out  experi-cyy-database.sql  genMassDataToMysql  main.c  massdatamysql.cpp  utils.cpp  utils.h
src/metaserver/: Makefile.am
src/test/: Makefile.am  list_test  list_test.c  tags
tools/: clean-auto.sh  gen-auto.sh
